Se añaden los fragmentos de detalle y de vídeo con su documentación detallada. También se han añadido dependencias a las librerías de ExoPlayer, así como algunas funciones de extensión de Glide.
Por otro lado también se ha añadio un GuideStepSupportFragment con toda la documentación de como se implementa.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/activity_main__container__parent_fragment"
-        android:name="com.isaacdelosreyes.googletvleanback.ui.catalog.view.MainFragment"
+        android:name="com.isaacdelosreyes.googletvleanback.ui.catalog.view.ImageCatalogFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
